# engine

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  LICENSE  README.md  build.sh  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vite.config.ts
.cursor/rules/: rust-build.md
.github/workflows/: ci.yml  npm.yml  publish.yml
demo/: README.md  benchmark_plot.py  benchmark_results.json  package-lock.json  package.json  tsconfig.json
demo/app/: globals.css  layout.tsx  page.tsx
demo/app/benchmark/: page.tsx
demo/components/: CodeEditor.tsx  Terminal.tsx  VariablesPanel.tsx  breakpointGutter.ts
demo/config/: benchmarks.ts  demoConfig.ts
demo/hooks/: useCodeExecution.ts
demo/src/app/: layout.tsx  page.tsx
demo/src/app/about/: page.tsx
demo/src/components/: Copyright.tsx  ModeSwitch.tsx  ProTip.tsx
docs/: debugger.md  example.cpp  example.wasm  integration.md  interface.md
src/: debug.rs  dwarf.rs  execution.rs  host.rs  index.ts  instrument.rs  io.rs  lib.rs  runtime.rs  types.rs  util.rs  worker.rs
src/dap/: adapter.rs  types.rs
src/debug/: debug.rs  dwarf.rs  dwarf_next.rs  dwarf_old.rs  instrument.rs  mod.rs  types.rs  variables.rs
src/debug/dwarf/: die.rs  mod.rs  serde.rs  types.rs  unit.rs  variables.rs
src/debug/formatters/: cpp.rs  mod.rs  vector.rs
src/debug/formatters/cpp/: map.rs  mod.rs  string.rs  vector.rs
src/debug/formatters/default/: mod.rs  referential.rs  scalar.rs  structure.rs
src/debug/instrument/: encoder.rs  function.rs  mod.rs
src/ts/: debugger.ts  index.ts  internals.ts  util.ts  worker.ts
src/ts/debugger/: breakpoint.ts  harness.ts  hit.ts  index.ts
src/worker/: debuggee.rs  execution.rs  io.rs  mod.rs  runtime.rs
tests/dap/runs/basic/: dap.json
tools/: Cargo.toml  breakpoints.rs
tools/breakpoints/: Cargo.toml  breakpoints.rs
tools/dap/: AGENTS.md  lldb.ts  matcher.ts  package-lock.json  package.json  run.ts
tools/dap/backends/: engine.ts  lldb.ts  runtime.ts
tools/dap/tests/basic/: dap.json  main.c
tools/dap/tests/basic-frames/: dap.json  main.c
tools/dap/tests/basic-struct/: dap.json  main.c
tools/dap/tests/breakpoints/: dap.jsonc
tools/dap/tests/formatting/: dap.jsonc  main.cpp
tools/dap/tests/formatting-counts/: dap.jsonc  main.cpp
tools/dap/tests/formatting-string/: dap.jsonc  main.cpp
tools/dap/tests/formatting/map/: dap.jsonc  main.cpp
tools/dap/tests/memory/: dap.jsonc
tools/dap/tests/multi-file/: dap.jsonc  helper.cpp  main.cpp
tools/dap/tests/namespaces/: dap.jsonc  main.cpp
tools/dap/tests/referential/: dap.json  dap.jsonc  main.cpp
tools/dap/tests/step-in/: dap.jsonc  main.cpp
tools/dap/tests/step-in-multiple/: dap.jsonc  main.cpp
tools/dap/tests/step-next/: dap.jsonc
tools/dap/tests/step-out/: dap.jsonc
tools/dap/tests/step-over-no-func-enter/: dap.jsonc
tools/dev/: package-lock.json  package.json  run.ts
util/: README.md
