[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[lib]
path = 'src/worker.rs'
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.83"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
tsify = "0.5.6"
wasm-bindgen="0.2"
wasm-bindgen-futures = "0.4.58"
wasmer = { version = "6.1.0", default-features = false, features = [
    "js",
    "js-default",
    "wasm-types-polyfill",
    "enable-serde",
] }
wasmer-wasix = { version = "0.601.0", default-features = false, features = [
    "js",
    "js-default",
] }
web-sys = { version = '0.3.83', features = ['DedicatedWorkerGlobalScope', 'MessageEvent', 'console'] } 
