[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[lib]
path = 'src/worker.rs'
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.1"
js-sys = "0.3.83"
serde = "1.0.228"
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6.5"
tar = "0.4"
tsify = "0.5.6"
wasm-bindgen="0.2"
wasm-bindgen-futures = "0.4.58"
wasmer = { version = "6.1.0", default-features = false, features = [
    "js",
    "js-default",
    "wasm-types-polyfill",
    "enable-serde",
] }
wasmer-wasix = { version = "0.601.0", default-features = false, features = [
    "js",
    "js-default"
] }
web-sys = { version = '0.3.83', features = ['DedicatedWorkerGlobalScope', 'MessageEvent', 'console'] } 
futures = "0.3.31"
console_error_panic_hook = "0.1.7"
async-trait = "0.1.89"
wasmer-config = "0.601.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
