[workspace]
members = [".", "tools"]

[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = "1.1"
js-sys = "0.3.83"
serde = "1.0.228"
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6.5"
tar = "0.4"
tsify = "0.5.6"
wasm-bindgen="0.2"
wasm-bindgen-futures = "0.4.58"
wasmer = { version = "6.1.0", default-features = false, features = [
    "js",
    "js-default",
    "wasm-types-polyfill",
    "enable-serde",
] }
wasmer-wasix = { version = "0.601.0", default-features = false, features = [
    "js",
    "js-default"
] }
web-sys = { version = '0.3.83', features = ['DedicatedWorkerGlobalScope', 'EventTarget', 'MessageEvent', 'Worker', 'console'] } 
futures = "0.3.31"
console_error_panic_hook = "0.1.7"
async-trait = "0.1.89"
wasmer-config = "0.601.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
serde_repr = "0.1.20"
anyhow = "1.0"
gimli = "0.33.0"
wasm-encoder = { version = "0.245", features = ["wasmparser"] }
wasmparser = "0.245"
serde_json = "1.0.149"
