[package]
name = "breakpoints"
version = "0.1.0"
edition = "2024"
description = "Breakpoint utility binary for runtime debugging workflows."
repository = "https://github.com/jacob/runtime"
license = "MIT"

[[bin]]
name = "breakpoints"
path = "breakpoints.rs"

[dependencies]
runtime = { path = "../.." }
wasmparser = "0.245"
