[package]
name = "breakpoints"
version = "0.1.0"
edition = "2024"
description = "Breakpoint utility binary for engine debugging workflows."
repository = "https://github.com/jacob/engine"
license = "MIT"

[[bin]]
name = "breakpoints"
path = "breakpoints.rs"

[dependencies]
engine = { path = "../.." }
wasmparser = "0.245"
